# Tokkatot

./: .env.example  .gitignore  AGENT.md  AI_INSTRUCTIONS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  docker-compose.staging.yml  docker-compose.yml  test_all_endpoints.ps1
.github/: CODE_REVIEW_CHECKLIST.md  copilot-instructions.md
ai-service/: .gitignore  AI_CONTEXT.md  AI_FEATURE_README.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
design/: README.md
docs/: 00_SPECIFICATIONS_INDEX.md  01_SPECIFICATIONS_ARCHITECTURE.md  02_SPECIFICATIONS_REQUIREMENTS.md  03_NEXT_PHASE_BLUEPRINT.md  04_BUDGET_SHEET_TEMPLATE.csv  04_BUDGET_SHEET_TEMPLATE.md  05_BUDGET_SHEET_PREFILLED_3MONTH.csv  05_BUDGET_SHEET_PREFILLED_3MONTH.md  AI_CONTEXT.md  ARCHITECTURE.md  AUTOMATION_USE_CASES.md  IG_SPECIFICATIONS_API.md  IG_SPECIFICATIONS_DATABASE.md  IG_SPECIFICATIONS_EMBEDDED.md  IG_SPECIFICATIONS_FRONTEND.md  IG_SPECIFICATIONS_SECURITY.md  IG_TOKKATOT_2.0_FARMER_CENTRIC_SPECIFICATIONS.md  OG_PROJECT_TIMELINE.md  OG_RISK_MANAGEMENT.md  OG_TEAM_STRUCTURE.md  README.md  SPECIFICATIONS_ARCHITECTURE.md  SPECIFICATIONS_DATABASE.md  SPECIFICATIONS_DEPLOYMENT.md  SPECIFICATIONS_INDEX.md  SPECIFICATIONS_REQUIREMENTS.md  SPECIFICATIONS_TECHNOLOGY_STACK.md  TEAM_STRUCTURE.md  TECH_STACK.md  USER_GUIDE.md
embedded/: AI_CONTEXT.md  sdkconfig
frontend/: AI_CONTEXT.md  manifest.json  sw.js
gateway/: .env.example  README.md  main.py  provisioning.py  requirements.txt
infra/: init.sql
middleware/: go.mod  (+8 more)
(+127 files in other folders)
